	PR c++/4926 	PR c++/38600 	* mangle.c (write_unqualified_id): Split out from write_expression. 	(write_unqualified_name): Call it. 	(write_member_name): Likewise. 	(write_expression): Support TEMPLATE_ID_EXPR. 	Disambiguate operator names.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156482 138bc75d-0d04-0410-961f-82ee72b054a4